# SecretsTransfer

./: .gitignore  Cargo.toml  Containerfile  Dockerfile  LICENSE  README.md  SECURITY.md  deployment.yml  docker-compose.yml  makefile  package-lock.json
.github/workflows/: rust_security_checks.yml
config/: config.json
redis/: Containerfile  redis.conf
src/: api.rs  config.json  config.rs  custom_middleware.rs  database.rs  frontend.rs  main.rs  other.rs  redis.rs  redis_client.rs  tracer.rs
src/config/: config.json
src/tests/: mod.rs
templates/: about.html  default_page_template.html  default_template.html  download.html  footer.html  header.html  index.html  input.css  navbar.html  package-lock.json  package.json  password_generator.html  secret_form.html  secret_submit_form.html  tailwind.config.js  upload.html
templates/static/: styles.css
test/: make-test-certs.sh  test_api.rs  web-test-cert.sh
