[package]
name = "SecretsTransfer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.3"
rustls = "0.19"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23"
tonic = "0.5"

redis = "0.20"

rusqlite = "0.25"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = "0.2"


